added pull request handlers
