# docs/models.go
@@ -1,6 +1,8 @@
 package docs
 
 import (
+	"time"
+
 	memberEntity "github.com/SmokingElk/avito-2025-autumn-intership/internal/domain/member/entity"
 	prEntity "github.com/SmokingElk/avito-2025-autumn-intership/internal/domain/pull-request/entity"
 )
@@ -103,4 +105,49 @@ type AddTeamResponse struct {
 type GetTeamResponse struct {
 	Name    string       `json:"team_name"`
 	Members []TeamMember `json:"members"`
+}
+
+type CreatePRRequest struct {
+	Id       string `json:"pull_request_id"`
+	Name     string `json:"pull_request_name"`
+	AuthorId string `json:"author_id"`
+}
+
+type PRResponseObject struct {
+	Id                string   `json:"pull_request_id"`
+	Name              string   `json:"pull_request_name"`
+	AuthorId          string   `json:"author_id"`
+	Status            string   `json:"status"`
+	AssignedReviewers []string `json:"assigned_reviewers"`
+}
+
+type CreatePRResponse struct {
+	Pr PRResponseObject `json:"pr"`
+}
+
+type MergePRRequest struct {
+	Id string `json:"pull_request_id"`
+}
+
+type MergePRResponseObject struct {
+	Id                string    `json:"pull_request_id"`
+	Name              string    `json:"pull_request_name"`
+	AuthorId          string    `json:"author_id"`
+	Status            string    `json:"status"`
+	AssignedReviewers []string  `json:"assigned_reviewers"`
+	MergedAt          time.Time `json:"mergedAt"`
+}
+
+type MergePRResponse struct {
+	Pr MergePRResponseObject `json:"pr"`
+}
+
+type ReassignRequest struct {
+	Id            string `json:"pull_request_id"`
+	OldReviewerId string `json:"old_reviewer_id"`
+}
+
+type ReassignResponse struct {
+	Pr         PRResponseObject `json:"pr"`
+	ReplacedBy string           `json:"replaced_by"`
 }
